--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "react-select": "^5.10.1",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
