--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@simplewebauthn/browser": "^13.1.0",
     "axios": "^1.10.0",
     "exceljs": "^4.4.0",
     "jspdf": "^3.0.1",
