--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_BASE_URL=https://marbu-backend-8k54rvj99-codewithumarrrs-projects.vercel.app/api/v1
+VITE_API_BASE_URL=https://marbu-backend.vercel.app/api/v1
 
 # Environment
 NODE_ENV=development
