--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # API Configuration
-VITE_API_BASE_URL=http://localhost:3003/api/v1
+//VITE_API_BASE_URL=http://localhost:3003/api/v1
+VITE_API_BASE_URL=https://marbu-backend.vercel.app/api/v1
 
 # Environment
 NODE_ENV=development
